bin_PROGRAMS = ec3_lpii
ec3_lpii_SOURCES = cargador.cpp ec3_lpii.cpp estacion.cpp fichero.cpp \
	genaleatorios.cpp grafo.cpp intruso.cpp lider.cpp llave.cpp miembro.cpp personaje.cpp \
	planta.cpp puerta.cpp sala.cpp trabajador.cpp

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
ec3_lpii_LDFLAGS = $(all_libraries) 
noinst_HEADERS = arbol.h cargador.h estacion.h fichero.h genaleatorios.h \
	grafo.h intruso.h lider.h lista.h llave.h miembro.h personaje.h planta.h \
	puerta.h sala.h trabajador.h
